--- a/app_documento/app/views/productos/edit.html.erb
+++ b/app_documento/app/views/productos/edit.html.erb
@@ -1,1 +1,9 @@
-<%= render 'form' %>
+<div class="span3"></div>
+<div class="span6">
+  <legend>
+    <%= flash[:accion]%>
+  </legend>
+  <p>Los campos con * son requeridos</p>
+  <%= render 'form' %>
+</div>
+<div class="span3"></div>
