--- a/app_documento/app/views/tramites/index.html.erb
+++ b/app_documento/app/views/tramites/index.html.erb
@@ -1,84 +1,61 @@
-<h1 style="margin-left:20px"><%= flash[:title] %></h1>
-
-<% if current_usuario.admin == 0 %>
-<div class="new_element" style="margin-bottom: 20px;margin-top: -35px;margin-right: 100px;float: right;">
-  <%= button_to 'Nueva solicitud', new_tramite_path, :method => :get %>
-</div>
-<% end %>
-<div class="filtro_wrapper" id="solicitud_tramite_wrapper">
-  <table id="solicitud_tramite_filtro">
+<div class="span2"></div>
+<div class="span8">
+<table id="solicitud_tramite_filtro" class="table table-hover table-striped">
     <thead>
-      <th>Solicitud</th>
+      <th style="text-align: center;"><h3>Solicitudes</h3></th>
     </thead>
     <tbody>
       <% @tramites.sort {|a,b| b.id <=> a.id }.each_with_index do |t, index| %>
-      <tr>
-        <td>
-          <%= content_tag "span", class: "content-tramite", id:"estado"+index.to_s, data: { requisito: t } do %>
-          <% if t.recibido or current_usuario.admin > 0 %>
-          <%= link_to (t) do%>
-          <ul style="height:0;">
-            <li>
-              <b>#<%= t.id %></b> <%= t.TipoDocumento.descripcion %>
-            </li>
-            <li style="font-size:10px; margin-bottom:10px;">
-              <% if not t.producto.nil? %>
-              <div style="margin-right: 40px;">
-                <%=t.producto.nombre%>
+        <tr>
+          <td>
+              <div class="pull-right">
+              <% case t.estado 
+                  when 0 %>
+                  <span class="label">enviado</span>
+                <% when 1%>
+                  <span class="label label-info">recibido</span>
+                <% when 2%>
+                  <span class="label label-warning">procesando</span>
+                <% when 3%>
+                  <span class="label label-success">terminado</span>
+                <% when 4%>
+                  <span class="label label-danger">rechazado</span>
+              <% end %>
               </div>
+
+              <div class="list-group">
+              <% if t.recibido or current_usuario.admin > 0 %>
+                <%= link_to (t) do%>
+                  <h5 class="list-group.item-heading">
+                    <b>#<%=t.id %></b>
+                    <%= t.TipoDocumento.descripcion %>
+                  </h5>
+                  <p class="list-group-item-text">
+                  <% if not t.producto.nil? %>
+                    <%=t.producto.nombre%>
+                  <% else %>
+                    nuevo producto
+                  <% end %>
+                  </p>
+                <% end %>
               <% else %>
-              Nuevo Producto
+                <h5 class="list-group.item-heading">
+                  <b>#<%=t.id %></b>
+                  <%= t.TipoDocumento.descripcion %>
+                </h5>
+                <p class="list-group-item-text">
+                <% if not t.producto.nil? %>
+                  <%=t.producto.nombre%>
+                <% else %>
+                  nuevo producto
+                <% end %>
+                </p>
               <% end %>
-            </li>
-          </ul>
-          <% end %>
-          <% else %>
-          <ul style="height:0;">
-            <li>
-              <%= t.TipoDocumento.descripcion %>
-            </li>
-            <li style="font-size:10px; margin-bottom:10px;">
-              <% if not t.producto.nil? %>
-              <%=t.producto.nombre%>
-              <% else %>
-              Nuevo Producto
-              <% end %>
-            </li>
-          </ul>
-          <% end %>
-          <% end %>
-        </td>
-      </tr>
+              </div>
+            </td>
+        </tr>
       <% end %>
     </tbody>
   </table>
-  <table style="width:100%;margin-left:20px;margin-top: 50px;">
-    <tr>
-      <td>
-        <div class="alerta" style="background: white;float:left"></div>
-        <div style="font-size:x-small">No recibido</div>
-      </td>
-      <td>
-        <div class="alerta" style="background: blue;float:left">  </div>
-        <div style="font-size:x-small">Recibido</div>
-      </td>
-      <td>
-        <div class="alerta" style="background: green;float:left"></div>
-        <div style="font-size:x-small">Aceptado </div>
-      </td>
-      <td>
-        <div class="alerta" style="background: red;float:left">  </div>
-        <div style="font-size:x-small">Rechazado</div>
-      </td>
-      <td>
-        <div class="alerta" style="background: yellow;float:left">  </div>
-        <div style="font-size:x-small">En proceso</div>
-      </td>
-    </tr>
-  </table>
 </div>
-<div style="width: 400px;padding-left:40px;margin-top: 450px;">
-  <button style= "padding:10px;">
-    <%= link_to 'Volver', :back %>
-  </button>
-</div>
+<div class="span2"></div>
