--- a/app_documento/app/views/logdocumento/show_by_user.html.erb
+++ b/app_documento/app/views/logdocumento/show_by_user.html.erb
@@ -1,4 +1,6 @@
-<table>
+<div class="span1"></div>
+<div class="span10">
+<table class="table">
   <thead>
     <tr>
       <th>
@@ -49,3 +51,5 @@
   <% end %>
 </tbody>
 </table>
+</div>
+<div class="span1"></div>
