--- a/app_documento/app/views/logproductos/show_by_user.html.erb
+++ b/app_documento/app/views/logproductos/show_by_user.html.erb
@@ -1,4 +1,6 @@
-<table>
+<div class="span1"></div>
+<div class="span10">
+<table class="table table-striped">
   <thead>
     <tr>
       <th>
@@ -40,3 +42,5 @@
     <% end %>
   </tbody>
 </table>
+</div>
+<div class="span1"></div>
